--- a/AminWeb/Areas/Admin/Views/Doc/ViewDoc.cshtml
+++ b/AminWeb/Areas/Admin/Views/Doc/ViewDoc.cshtml
@@ -70,7 +70,7 @@
         </div>
         <div>
             <form action="/Admin/Doc/DocDone/@Model.DocId">
-                <input type="text" name="" value="" placeholder="پیام شما" />
+                <input type="text" name="errorMessage" value="" placeholder="پیام شما" />
                 <input type="radio" name="isValid" value="1" />تائید مدارک
                 <input type="radio" name="isValid" value="2" />رد مدارک
                 <input type="submit" value="ثبت" />
