--- a/AminWeb/Areas/User/Views/Shared/Navigation.cshtml
+++ b/AminWeb/Areas/User/Views/Shared/Navigation.cshtml
@@ -11,7 +11,7 @@
             </a>
         </li>
         <li>
-            <a href="/User/Account/Wallet" uk-icon="money">
+            <a href="/User/Wallet" uk-icon="money">
                 کیف پول
             </a>
         </li>
