--- a/AminWeb/Areas/Admin/Views/Doc/ViewDoc.cshtml
+++ b/AminWeb/Areas/Admin/Views/Doc/ViewDoc.cshtml
@@ -31,17 +31,19 @@
             </address>
         </div>
         <div>
-            @if (Model.IsValid == 1)
+            @switch (Model.IsValid)
             {
-                <h4 class="blockquote alert alert-success text-success">تائید شده</h4>
-            }
-            else if (Model.IsValid == 2)
-            {
-                <h4 class="blockquote alert alert-danger text-danger">رد شده</h4>
-            }
-            else if (Model.IsValid == 0)
-            {
-                <h4 class="blockquote alert alert-box-warning text-warning">منتظر نظر شما </h4>
+                case 0:
+                    <h4 class="blockquote alert alert-box-warning text-warning">منتظر نظر شما </h4>
+                    break;
+                case 1:
+                    <h4 class="blockquote alert alert-success text-success">تائید شده</h4>
+                    break;
+                case 2:
+                    <h4 class="blockquote alert alert-danger text-danger">رد شده</h4>
+                    break;
+                default:
+                    break;
             }
         </div>
 
