--- a/AminWeb/Areas/User/Views/Wallet/Index.cshtml
+++ b/AminWeb/Areas/User/Views/Wallet/Index.cshtml
@@ -21,7 +21,7 @@
             <label for="Charge" dir="rtl">مبلغ (ريال)</label>
             <div class="input-group">
                 <input type="text" id="name" name="Charge" required
-                       minlength="4" maxlength="20" >
+                       minlength="4" maxlength="20">
             </div>
             <span role="alert" class="alert">@*لطفا این فیلد را وارد نمایید*@</span>
         </div>
@@ -52,8 +52,26 @@
         </p>
 
         <p class="alert-box alert-box-success">
-            مبلغ قابل برداشت: <span>400,000</span>
+            مبلغ قابل برداشت: <span>400,000</span> ريال 
         </p>
+
+        <div class="form-group">
+            <label for="card" dir="rtl">شماره کارت</label>
+            <div class="input-group">
+                <input type="text" id="card" name="card" required
+                       minlength="4" maxlength="16">
+            </div>
+            <span role="alert" class="alert">@*لطفا این فیلد را وارد نمایید*@</span>
+        </div>
+
+        <div class="form-group">
+            <label for="Charge" dir="rtl">مبلغ (ريال)</label>
+            <div class="input-group">
+                <input type="text" id="name" name="Charge" required
+                       minlength="4" maxlength="20">
+            </div>
+            <span role="alert" class="alert">@*لطفا این فیلد را وارد نمایید*@</span>
+        </div>
 
         <div class="row-reverse uk-margin-top" type="button">
             <button class="btn-primary">
@@ -80,7 +98,7 @@
                 تومان
             </span>
             <span role="definition" id="balance">
-                
+
             </span>
         </h4>
     </div>
