--- a/AminWeb/Areas/User/Views/Wallet/Transaction.cshtml
+++ b/AminWeb/Areas/User/Views/Wallet/Transaction.cshtml
@@ -35,7 +35,7 @@
                 <td>@item.Date.ToShamsi()</td>
                 <td>
                     <span>
-                        تسویه
+                        تسویه @((item.IsDoneWithdraw) ? "(واریز شد)" : "(در حال بررسی)")
                     </span>
                 </td>
             </tr>
