--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -118,13 +118,23 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a href="/Admin/Older/Prices">
+                                    <a href="/Admin/Order/Prices">
                                         درصد و سقف برداشت
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="/Admin/Home/Contact">
-                                       فروش کلی
+                                    <a href="/Admin/Order/Sail">
+                                        فروش
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/Admin/Order/Withdraw">
+                                        درخواست برداشت
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="/Admin/Order/Charging">
+                                        شارژ حساب 
                                     </a>
                                 </li>
                             </ul>
