--- a/AminWeb/Views/Account/ActiveUser.cshtml
+++ b/AminWeb/Views/Account/ActiveUser.cshtml
@@ -14,7 +14,7 @@
         @Html.ValidationMessageFor(m=>m.id, "", new { @class = "uk-text-danger" })
         <div class="column center uk-margin-large-top">
             <button class="btn-primary uk-margin-bottom" onclick="LoadingRun()">
-                غعال سازی
+                فعال سازی
             </button>
         </div>
     }
