--- a/AminWeb/Areas/Admin/Views/Order/Turnover.cshtml
+++ b/AminWeb/Areas/Admin/Views/Order/Turnover.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DataLayer.ViewModels.VmWallet>
 
 @{
-    ViewBag.Title = "گردش مالی";
+    ViewBag.Title = " عملکرد";
 }
 
 <table dir="rtl" class="table-simple table">
