--- a/AminWeb/Areas/Admin/Views/User/UserList.cshtml
+++ b/AminWeb/Areas/Admin/Views/User/UserList.cshtml
@@ -71,7 +71,7 @@
                         <th scope="col">فعال</th>
                         <th scope="col">گذرواژه</th>
                         <th scope="col">مدارک</th>
-                        <th scope="col">گردش مالی</th>
+                        <th scope="col">عملکرد</th>
                         <th scope="col">نقش</th>
                         <th scope="col">عملیات</th>
                     </tr>
