--- a/AminWeb/Areas/Admin/Views/User/ViewUser.cshtml
+++ b/AminWeb/Areas/Admin/Views/User/ViewUser.cshtml
@@ -26,7 +26,7 @@
             <dd>
                 <a href="">مشاهده</a>
             </dd>
-            <dt>گردش مالی</dt>
+            <dt>عملکرد</dt>
             <dd>
                 <a href="">مشاهده</a>
             </dd>
