--- a/AminWeb/Areas/Admin/Views/Video/Index.cshtml
+++ b/AminWeb/Areas/Admin/Views/Video/Index.cshtml
@@ -70,7 +70,7 @@
                         <th scope="col">پسندها</th>
                         <th scope="col">قیمت</th>
                         <th scope="col">دسته </th>
-                        <th scope="col">کلاس </th>
+                        <th scope="col">عنوان کلاس </th>
                         <th scope="col">نام کاربر </th>
                         <th scope="col">نقش</th>
                         <th scope="col">خیریه</th>
