--- a/AminWeb/Areas/User/Views/Classes/Create.cshtml
+++ b/AminWeb/Areas/User/Views/Classes/Create.cshtml
@@ -46,14 +46,14 @@
             </div>
             @Html.ValidationMessageFor(model => model.CatagoryId, "", new { @class = "uk-text-danger" })
         </div>
-        <div class="uk-margin-top uk-margin-bottom">
+        @*<div class="uk-margin-top uk-margin-bottom">
             <label dir="rtl">
                 @Html.EditorFor(m => m.IsCharity)
                 میخواهم درصدی از درامد ویدیو های این کلاس به خیریه
                 <a href="#" class="blue">نام خیریه</a>
                 اهدا شود
             </label>
-        </div>
+        </div>*@
         <div class="form-group">
             <label for="Certificate">عکس کلاس</label>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
@@ -67,7 +67,7 @@
             @Html.ValidationMessageFor(model => model.Link, "", new { @class = "uk-text-danger" })
         </div>
         <div class="form-group">
-            <label for="Certificate">در صورت ارایه مدرک، آن را آپلود کنید</label>
+            <label for="Certificate">در صورت داشتن مدرک در زمینه مربوطه آن را آپلود کنید</label>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
                 <span uk-icon="icon: cloud-upload"></span>
                 <span class="uk-text-middle">فایل خود را اینجا بیاندازید و یا</span>
