--- a/AminWeb/Areas/User/Views/Doc/InformationUpload.cshtml
+++ b/AminWeb/Areas/User/Views/Doc/InformationUpload.cshtml
@@ -84,9 +84,9 @@
             {
                 <div>
                     <h5>
-                        پروانه آموزشی
+                        دیگر مدارک
                     </h5>
-                    <a class="uk-inline" href="~/Resources/Doc/@Model.ParvaneAmuzeshgahUrl" data-caption="پروانه آموزشی">
+                    <a class="uk-inline" href="~/Resources/Doc/@Model.ParvaneAmuzeshgahUrl" data-caption="دیگر مدارک">
                         <img src="~/Resources/Doc/@Model.ParvaneAmuzeshgahUrl" alt="">
                     </a>
                 </div>
