--- a/AminWeb/Areas/User/Views/Doc/Upload.cshtml
+++ b/AminWeb/Areas/User/Views/Doc/Upload.cshtml
@@ -69,10 +69,10 @@
             </span>
         </div>
         <div class="form-group">
-            <label for="Video">پروانه آموزشی </label>
+            <label for="Video">دیگر مدارک  </label>
             <div class="js-upload mat uk-placeholder uk-margin-remove-top uk-margin-remove-bottom uk-text-center" dir="rtl">
                 <span uk-icon="icon: cloud-upload"></span>
-                <span class="uk-text-middle">پروانه آموزشی  خود را اینجا بیاندازید و یا</span>
+                <span class="uk-text-middle"> دیگر مدارک  خود را اینجا بیاندازید و یا</span>
                 <div uk-form-custom>
                     <input type="file" name="ParvaneAmuzeshgahUrl">
                     <span class="blue">کلیک کنید</span>
