--- a/AminWeb/Areas/Admin/Views/Order/Withdraw.cshtml
+++ b/AminWeb/Areas/Admin/Views/Order/Withdraw.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DataLayer.MetaData.MdWithdraw>
 @{
-    ViewBag.Title = "درخواست برداشت";
+    ViewBag.Title = "درخواست های برداشت";
 }
 
 <div class="card flex-div border-0 shadow">
