--- a/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -129,7 +129,7 @@
                                 </li>
                                 <li>
                                     <a href="/Admin/Order/Withdraw">
-                                        درخواست برداشت
+                                        درخواست های برداشت
                                     </a>
                                 </li>
                                 <li>
