--- a/AminWeb/Areas/Admin/Views/User/Index.cshtml
+++ b/AminWeb/Areas/Admin/Views/User/Index.cshtml
@@ -63,7 +63,7 @@
                         <th scope="col">فعال</th>
                         <th scope="col">مدارک</th>
                         <th scope="col">مشاهده ویدیوها</th>
-                        <th scope="col">گردش مالی</th>
+                        <th scope="col">عملکرد</th>
                         <th scope="col">نقش</th>
                         <th scope="col">تغیر رمز</th>
                         <th scope="col">عملیات</th>
