--- a/AminWeb/Areas/User/Views/Video/Create.cshtml
+++ b/AminWeb/Areas/User/Views/Video/Create.cshtml
@@ -86,14 +86,14 @@
             </span>
         </div>
 
-        <div class="uk-margin-top uk-margin-bottom">
+        @*<div class="uk-margin-top uk-margin-bottom">
             <label dir="rtl">
                 @Html.EditorFor(m => m.IsCharity)
                 میخواهم درصدی از درامد این ویدیو به خیریه
                 <a href="#" class="blue">نام خیریه</a>
                 اهدا شود
             </label>
-        </div>
+        </div>*@
         <div class="form-group">
             <label for="Playlist">دسته </label>
             <div class="row-reverse">
