--- a/AminWeb/Areas/User/Views/Video/Edit.cshtml
+++ b/AminWeb/Areas/User/Views/Video/Edit.cshtml
@@ -111,14 +111,14 @@
             </span>
         </div>
 
-        <div class="uk-margin-top uk-margin-bottom">
+        @*<div class="uk-margin-top uk-margin-bottom">
             <label dir="rtl">
                 @Html.EditorFor(m => m.IsCharity, "", new { @class = "uk-checkbox" })
                 میخواهم درصدی از درامد این ویدیو به خیریه
                 <a href="#" class="blue">نام خیریه</a>
                 اهدا شود
             </label>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <label for="Playlist">کلاس</label>
