--- a/AminWeb/Views/Account/Register.cshtml
+++ b/AminWeb/Views/Account/Register.cshtml
@@ -54,7 +54,7 @@
                 @Html.ValidationSummary(true, "", new { @class = "uk-text-danger" })
             </span>
         </div>
-        <label dir="rtl" class="uk-margin-small-top"><input class="uk-checkbox" type="checkbox"> با <a href="#" class="blue">قوانین و مقررات سایت</a> موافق هستم</label>
+        <label dir="rtl" class="uk-margin-small-top"><input class="uk-checkbox" type="checkbox"> با <a href="/Home/Rules" class="blue">قوانین و مقررات سایت</a> موافق هستم</label>
 
         <div class="column center uk-margin-large-top">
             <button class="btn-primary uk-margin-bottom" onclick="LoadingRun('#RegisterForm')">
