--- a/AminWeb/Views/ManageEmails/RecoveryPassword.cshtml
+++ b/AminWeb/Views/ManageEmails/RecoveryPassword.cshtml
@@ -2,9 +2,9 @@
 @model DataLayer.Models.TblUser
 <div style="direction: rtl; padding: 20px">
     <h2>@Model.Name عزیز !</h2>
-    <p>با تشکر از ثبت نام شما در سایت ما ، جهت فعال سازی حساب کاربری خود روی لینک زیر کلیک کنید .</p>
+    <p>جهت بازیابی کلمه عبور خود روی لینک زیر کلیک کنید .</p>
     <p>
-        <a href="@ConfigurationManager.AppSettings["MyDomain"]/Account/ActiveUser/@Model.Auth">لینک فعالسازی</a>
+        <a href="@ConfigurationManager.AppSettings["MyDomain"]/RecoveryPassword/@Model.Auth">لینک بازیابی کلمه عبور </a>
     </p>
 </div>
 
